horizontal scrolling fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .container-fluid {
   padding-right:0;
   padding-left:0;
@@ -13,6 +17,79 @@ nav {
 .navbar-nav {
   margin-left:60%;
 }
+
+/* Hamburger menu */
+
+@media all and (min-width:900px) {
+.hamburger-menu {
+display:none;
+}
+}
+@media all and (max-width:900px) {
+.desktop-menu {
+display:none;
+}
+}
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    z-index:50;
+
+}
+
+nav {
+      height:53px;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.active {
+    background-color: #c5c7c2;
+    color: white;
+}
+
+.topnav .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 
 /* PARALLAX HOME */
 /* parallax 1*/
@@ -37,11 +114,6 @@ nav {
   background-color: rgba(197,199,194,0.8);
 }
 
-.line1 {
-  display:block;
-  background-color:#c5c7c2;
-  height:20px;
-}
 
 /* BLOG */
 
